--- a/src/utils/card.scss
+++ b/src/utils/card.scss
@@ -6,19 +6,21 @@
     
 }
 .card-grid{
-    width: 50vw;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     background-color: #fff ;
     padding:2rem;
     margin:1rem;
+    border-radius: 10px;
+    box-shadow: 0 0 5px grey;
 }
 .card-grid>*,.details>*,.formdetails>*,form>*{
     background-color: #fff;
 }
 img{
-    width: 150px;
-    height: 100px;
+    width: 170px;
+    height: 150px;
 }
 
 .details{
@@ -36,8 +38,23 @@ img{
     flex-direction: column;
 }
 
+.formgroup1{
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    text-align: start;
+    gap:0.5rem;
+    align-items: center;
+    justify-content: center;
 
-.formgroup1,.formgroup2,.labelformgroup1,.labelformgroup2{
+}
+
+.note{
+    grid-column: 1/-1;
+}
+.note-text{
+    grid-column: span 2;
+}
+.formgroup2,.labelformgroup2{
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -60,17 +77,24 @@ form{
     justify-content: center;
     flex: 2;
     padding: 1rem;
+    text-align: start;
 }
 
-input{
-    border-radius: 1rem;
-    border: 0.5px solid grey;
+.formgroup1>input,.formgroup1>select{
+    border-radius: 0.2rem;
+    border: 0.5px grey;
     background-color: #fff;
     outline: none;
     padding: 0.3rem;
+    box-shadow: 0 0 3px grey;
+    color:grey
 }
 
 p{
     margin:0
 }
 
+.price{
+    align-self: flex-start;
+    
+}
