--- a/src/utils/tab/tabcomponent.scss
+++ b/src/utils/tab/tabcomponent.scss
@@ -4,19 +4,99 @@
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    
 }
 
 .active{
-    background-color: teal;
+    transform: scale(1.1);   
+    opacity:1 !important;
 }
 
+.tab{
+    padding: 2rem;
+    opacity: 0.7;
+    min-height:130px
+}
 .tabs{
     display: flex;
     align-self: flex-start;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: 1rem;
     padding: 1 rem;
     position: sticky;
     top:0;
+    border-right: 4px solid #0D6EFD;
+    min-width: 170px;
+    min-height: 650px;
+}
+
+.tabs>img,.search-item{
+    height: 70px;
+    width: 70px;
+    z-index: -1;
+    color:#000;
+    opacity: 0.5;
+}
+.tabs>p{
+    z-index: -1;;
+    cursor: pointer;
+    opacity: 0.5;
+}
+.tabs>div{
+    color:#0D6EFD;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.search-item{
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    z-index: -2;
+}
+
+.search-item-p{
+    position: absolute;
+    top:100px;
+    left:30px;
+    z-index: -2;
+}
+.pizza-item{
+    position: absolute;
+    top:180px;
+    left:40px;
+    z-index: -2;
+}
+.pizza-item-p{
+    position: absolute;
+    top:260px;
+    left:55px;
+    z-index: -2;
+}
+.consumable-item{
+    position: absolute;
+    top:340px;
+    left:40px;
+    z-index: -2;
+}
+.consumable-item-p{
+    position: absolute;
+    top:420px;
+    left:30px;
+    z-index: -2;
+}
+.decoration-item{
+    position: absolute;
+    top:500px;
+    left:40px;
+    z-index: -2;
+}
+.decoration-item-p{
+    position: absolute;
+    top:580px;
+    left:35px;
+    z-index: -2;
 }
